--- a/package.json
+++ b/package.json
@@ -9,17 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.0.0",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "lodash": "^4.17.21",
     "next": "13.4.12",
+    "next-auth": "^4.22.3",
+    "next-cloudinary": "^4.17.1",
+    "next-superjson-plugin": "^0.5.9",
     "postcss": "8.4.27",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "react-select": "^5.7.4",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.197",
+    "prisma": "^5.0.0"
   }
 }
