--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 GITHUB_SECRET=c12d22774a66aebf2718ae37dde437b1f2d37b07
 GITHUB_ID=bd1a51fbbd2ba43bc3e8
    
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=377060903555-lrrsr5kau86opshlmm46cuc1al02u2qm.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dmp2e9oeu
 
